org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Redefinition_OwningType_Invalid.sysml.xt
//*
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLTests
	ResourceSet {
		ThisFile {}
		File {from ="/library.kernel/Base.kerml"}
        File {from ="/library.kernel/Objects.kerml"}
       	File {from ="/library.kernel/Performances.kerml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
		        File {from ="/library.kernel/Objects.kerml"}
		       	File {from ="/library.kernel/Performances.kerml"}
			}
		}
	}
END_SETUP 
*/
package 'Redefinition Example' {
	
	part wheel : Wheel;
	// XPECT warnings --> "A package-level feature should not be redefined" at "wheel"
	part wheel1 redefines wheel;
	
	part def B {
		alias Vehicle::eng as eng1;
	}

	part def Vehicle specializes B {
		part eng : Engine;
		// XPECT warnings --> "Owner of redefining feature should not be the same as owner of redefined feature" at "eng1"
		part smallEng : Engine redefines eng1;
	}
	part def Engine {
		part cyl : Cylinder[4..6];
	}
	part def Cylinder;
	part def Wheel;
}
